# flutter_sound_touch_cpp_source

./: README.md
soundtouchandroid/: settings.gradle
soundtouchandroid/app/: build.gradle
soundtouchandroid/app/src/androidTest/java/com/tencent/soundtouch/: ExampleInstrumentedTest.java
soundtouchandroid/app/src/androidTest/java/com/tentcent/soundtouch/: ExampleInstrumentedTest.java
soundtouchandroid/app/src/main/: AndroidManifest.xml
soundtouchandroid/app/src/main/abc/: native-lib.cpp
soundtouchandroid/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
soundtouchandroid/app/src/main/java/com/tencent/soundtouch/: MainActivity.java  SoundTouch.java
soundtouchandroid/app/src/main/java/com/tentcent/soundtouch/: MainActivity.java  SoundTouch.java
soundtouchandroid/app/src/main/jni/: Android.mk  CMakeLists.txt
soundtouchandroid/app/src/main/res/values/: themes.xml
soundtouchandroid/app/src/main/res/values-night/: themes.xml
soundtouchandroid/app/src/test/java/com/tencent/soundtouch/: ExampleUnitTest.java
soundtouchandroid/app/src/test/java/com/tentcent/soundtouch/: ExampleUnitTest.java
soundtouchandroid/gradle/wrapper/: gradle-wrapper.properties
soundtouchios/soundtouchios/: SoundTouchIOS.h  SoundTouchIOS.mm  soundtouchios.h  soundtouchios.m  soundtouchios.mm
soundtouchios/soundtouchios.xcodeproj/: project.pbxproj
soundtouchios/soundtouchios.xcodeproj/project.xcworkspace/xcuserdata/zhengzhihao.xcuserdatad/: UserInterfaceState.xcuserstate
soundtouchios/soundtouchios.xcodeproj/xcshareddata/xcschemes/: soundtouchios.xcscheme
soundtouchios/soundtouchios.xcodeproj/xcuserdata/zhengzhihao.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
soundtouchios/soundtouchios.xcodeproj/xcuserdata/zhengzhihao.xcuserdatad/xcschemes/: xcschememanagement.plist
soundtouchios/soundtouchios/include/: SoundTouchExtension.h
soundtouchios/soundtouchios/source/: SoundTouchExtension.cpp
source/soundTouchAndroid/: settings.gradle
source/soundTouchAndroid/app/: build.gradle
source/soundTouchAndroid/app/src/androidTest/java/com/tentcent/soundtouchandroid/: ExampleInstrumentedTest.java
source/soundTouchAndroid/app/src/main/: AndroidManifest.xml
source/soundTouchAndroid/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
source/soundTouchAndroid/app/src/main/java/com/tentcent/soundtouchandroid/: MainActivity.java  (+1 more)
source/soundTouchAndroid/app/src/main/jni/: Android.mk  Application.mk  CMakeLists.txt  soundtouch-jni.cpp
source/soundTouchAndroid/app/src/main/res/values/: strings.xml  themes.xml
source/soundTouchAndroid/app/src/main/res/values-night/: themes.xml
source/soundTouchAndroid/gradle/wrapper/: gradle-wrapper.properties
(+1 files in other folders)
